# flutter-skill

./: .dockerignore  .gitignore  .pubignore  AUTO_PRIORITY_SETUP.md  CHANGELOG.md  CHANGELOG_FIXES.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ERROR_REPORTING.md  README.md  RELEASE_GUIDE.md  SKILL.md  pubspec.yaml  server.json  uninstall.sh
.github/workflows/: build-binary.yml  ci.yml  devcontainer-feature.yml  pages.yml  release.yml
demo_counter/: .metadata  README.md  pubspec.yaml
demo_counter/lib/: main.dart
devcontainer-feature/src/flutter-skill/: devcontainer-feature.json
docs/: AUTO_FIX_IMPROVEMENTS.md  CLI_CLIENT.md  IDE_SETUP.md  PLUGIN_TESTING_GUIDE.md  ROADMAP.md  SPONSORSHIP_SETUP.md  TEST_INDICATORS_DESIGN.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  cli-server-commands.md  test_auto_fix.md
docs/site/: index.html
examples/demo_indicators/: QUICK_START.md  README.md  quick_demo.sh  test_indicators_demo.dart
intellij-plugin/: build.gradle.kts
lib/: flutter_skill.dart
lib/src/: flutter_skill_client.dart
lib/src/bridge/: cdp_browser_methods.dart  cdp_driver.dart  device_presets.dart  web_bridge_proxy.dart
lib/src/cli/: act.dart  ai_client.dart  client.dart  demo.dart  diff.dart  doctor.dart  explore.dart  init.dart  launch.dart  monkey.dart  plan.dart  quickstart.dart  report_error.dart  security.dart  serve.dart  server.dart  setup.dart  setup_priority.dart  test_runner.dart
lib/src/diagnostics/: error_reporter.dart
lib/src/discovery/: bridge_discovery.dart  process_based_discovery.dart  unified_discovery.dart
lib/src/drivers/: app_driver.dart  bridge_driver.dart  flutter_driver.dart  native_driver.dart
lib/src/engine/: tool_registry.dart
lib/src/experimental/: protocol_detector.dart
native/cdp-engine/src/: main.rs  ops.rs  server.rs
npm/: package.json
packaging/homebrew/: flutter-skill.rb
packaging/npm/: package.json
packaging/npm/dart/: pubspec.yaml
packaging/npm/scripts/: postinstall.js
scripts/: bump_version.dart  bump_version.sh  diagnose.sh  release.sh  setup_test_environment.sh  sync_docs.dart
sdks/android/: README.md  build.gradle.kts
sdks/cpp/: CMakeLists.txt  README.md
sdks/cpp/examples/: main.cpp
sdks/cpp/include/flutter_skill/: bridge.h
sdks/cpp/src/: automation_linux.cpp  automation_macos.mm  automation_windows.cpp  bridge.cpp  json_rpc.h  sha1.h  websocket.h
sdks/cpp/tests/: CMakeLists.txt  real_integration_test.py  test_bridge.cpp  test_json_rpc.cpp  test_runner.h  test_websocket.cpp
sdks/dotnet-maui/: FlutterSkill.csproj  FlutterSkillBridge.cs  README.md
sdks/electron/: README.md  flutter-skill-electron.js  package.json
sdks/harmonyos/: FlutterSkillAbility.ets  README.md  oh-package.json5
sdks/ios/: README.md
sdks/kmp/: README.md  build.gradle.kts
sdks/python/: README.md  pyproject.toml  setup.py
sdks/python/pytest_flutter_skill/: __init__.py  client.py  fixture.py
sdks/react-native/: FlutterSkill.js  README.md  package.json
sdks/tauri/: Cargo.toml  README.md
sdks/web/: README.md  flutter-skill-web.js  flutter-skill.js  package.json
skills/e2e-testing/: SKILL.md
snap/: snapcraft.yaml
test/: flutter_skill_complete_test.dart  integration_test.dart  lock_mechanism_test.dart  multi_session_test.dart  tool_registry_test.dart
test/e2e/: bridge_e2e_test.dart  bridge_e2e_test.mjs  full_mcp_test.mjs  ios_visual_test.dart  web_e2e_test.dart  web_visual_test.dart
test/e2e/tauri_test_app/src-tauri/: Cargo.toml  tauri.conf.json
test/e2e/tauri_test_app/src-tauri/capabilities/: default.json
test/e2e/tauri_test_app/src-tauri/src/: main.rs
test_app/lib/: main.dart
test_integration/: integration_test.dart
vscode-extension/: package.json
vscode-extension/src/: extension.ts  mcpConfigManager.ts  vmServiceScanner.ts
(+68 files in other folders)
